Java 11 Compatibility Changes
- Replace removed from JDK javax libraries with their jakarta replacements
- Remove final keywords from groovy specifications as it causes errors with JDK 11 builds
- Truncate Instant used in test to millisecond precision as Java 11 returns microsecond precision but for this class we explicitly create modified times with milliseconds from epoch