@@ -56,6 +56,15 @@ dependencies {
 
 def genieVersion = project.version.toString()
 
+compileJava {
+    if (JavaVersion.current().isJava9Compatible() && project.targetCompatibility != JavaVersion.VERSION_1_8) {
+        options.compilerArgs += [
+                "--add-exports",
+                "jdk.unsupported/sun.misc=ALL-UNNAMED"
+        ]
+    }
+}
+
 jar {
     manifest {
         attributes("Implementation-Version": genieVersion)
